--- a/pig_dice_game/readme
+++ b/pig_dice_game/readme
@@ -6,5 +6,5 @@ version 1.0 gameplay:
 The first player to score 100 or more points wins.
 
 version 2.0 & 2.1 gameplay:
-  TBD
+  Same as version 1.0 but with extended rules.
 
