--- a/pig_dice_game/readme
+++ b/pig_dice_game/readme
@@ -1,3 +1,5 @@
+Built in JavaScrpit (ES5) 
+
 version 1.0 gameplay: 
   Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold":
   - If the player rolls a 1, they score nothing and it becomes the next player's turn.
